Mon Apr 09 21:12:40 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/matop.c: forgotten nargs setting led to a crash when
	  adding fake conj.
	
	* src/compil.c, src/matop.c: correctly set uninitialized flag
	  for identifiers.

	* src/eval.[ch]: avoid some uninitialized compilation warnings.

Mon Apr 09 20:44:03 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c, src/structs.h: Store state of "uninitialized"
	  with identifier nodes so that we don't double warn of uninitialized
	  identifiers with something like "x+5"

Thu Mar 29 10:35:45 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c, src/eval.c, src/funclib.c, lib/*/*.gel: fix some
	  spelling and capitalization

	* help/C/gel-function-list.xml: fix spelling

	* combinatorics/recursive_sequences.gel: Fix LinearRecursiveSequence,
	  and also allow it to take matrix argument

	* src/geniustests.txt: add a few tests

	* help/C/*.xml: Fixes from Luc Pionchon that I totally forgot about
	  for 1.0.15

Wed Mar 28 17:08:55 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: fix possible uninitialized use when reading 
	  the compiled library (though it's code that never gets hit
	  unless the installed library gets corrupted)

	* NEWS: fix typos

Wed Mar 28 15:57:41 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: when running help and things are not documented and not
	  defined, don't output three lines saying so, just the one error will
	  do.

Tue Mar 27 22:56:49 2012  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.15

Thu Mar 22 11:25:49 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: remove some redundant code, load the exp for
	  matrices lazily

Wed Mar 21 15:39:04 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/*.[ch]: mark a bunch of functions as pure.  Probably doesn't
	  help with optimization, but it might.

Tue Mar 20 13:13:48 2012  Jiri (George) Lebl <jirka@5z.com>

	* help/*/figures/*.eps: remove .eps figures, there is no need for