@@ -4615,6 +4615,20 @@ and has period <userinput>b-a</userinput>.</para>
          </listitem>
         </varlistentry>
 
+        <varlistentry id="gel-function-sinc">
+         <term>sinc</term>
+         <listitem>
+          <synopsis>sinc (x)</synopsis>
+	  <para>Calculates the unnormalized sinc function, that is
+		  <userinput>sin(x)/x</userinput>.
+		  If you want the normalized function call <userinput>sinc(pi*x)</userinput>.</para>
+          <para>
+	    See
+	    <ulink url="http://en.wikipedia.org/wiki/Sinc">Wikipedia</ulink> for more information.
+	  </para>
+         </listitem>
+        </varlistentry>
+
       </variablelist>
     </sect1>
 
