@@ -2,10 +2,12 @@ Changes to 1.0.16
 
 * Simpler output when typing "help foo" when foo is neither defined nor
   documented.
+* Add sinc function
 * Fix possible uninitialized crash when reading badly formed standard library
   (should never happen but ...)
 * Fix LinearRecursiveSequence and allow it to take vector for n
 * Fix crash on uninitialized variables in conjugate transpose
+* Fix derivatives of Im and Re
 * Avoid double error about uninitialized variables
 * Spelling fixes and documentation fixes (me, LucPionchon)
 
