@@ -1,3 +1,11 @@
+Wed Apr 11 16:56:15 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/symbolic.c: fix derivatives of Im and Re to be the z
+	  derivatives.
+
+	* src/funclib.c, src/symbolic.c, help/C/gel-function-list.xml:
+	  add the sinc function and its derivative.
+
 Mon Apr 09 21:12:40 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/matop.c: forgotten nargs setting led to a crash when
